# 2d_game_dev_tutorial

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  RESOURCES.md  ROADMAP.md  SETUP.md  STYLE.md
stages/05-cmake-and-debugging-basics/: CMakeLists.txt  README.md
stages/05-cmake-and-debugging-basics/exercises/: 02_assert_ndebug.cpp  02_assert_ndebug.solution.cpp  03_find_the_bug.cpp  03_find_the_bug.solution.cpp  04_format_me.cpp  04_format_me.solution.cpp  05_tidy_me.cpp  05_tidy_me.solution.cpp
stages/05-cmake-and-debugging-basics/project/: CMakeLists.txt
stages/06-pointers-references-asan/: CMakeLists.txt  README.md
stages/06-pointers-references-asan/exercises/: 01_address_and_deref.cpp  01_address_and_deref.solution.cpp  02_references.cpp  02_references.solution.cpp  03_null_and_safety.cpp  03_null_and_safety.solution.cpp  04_new_delete.cpp  04_new_delete.solution.cpp  05_swap.cpp  05_swap.solution.cpp  06_use_after_free.cpp  06_use_after_free.solution.cpp
stages/07-classes-and-oop/: CMakeLists.txt  README.md
stages/07-classes-and-oop/exercises/: 01_first_class.cpp  01_first_class.solution.cpp  02_member_init_list.cpp  02_member_init_list.solution.cpp  03_const_methods.cpp  03_const_methods.solution.cpp  04_encapsulation.cpp  04_encapsulation.solution.cpp  05_inheritance_virtual.cpp  05_inheritance_virtual.solution.cpp  06_raii.cpp  06_raii.solution.cpp
stages/08-operators-templates-namespaces/: CMakeLists.txt  README.md
stages/08-operators-templates-namespaces/exercises/: 01_operator_plus.cpp  01_operator_plus.solution.cpp  02_equality.cpp  02_equality.solution.cpp  03_stream_output.cpp  03_stream_output.solution.cpp  04_function_template.cpp  04_function_template.solution.cpp  05_class_template.cpp  05_class_template.solution.cpp  06_namespaces.cpp  06_namespaces.solution.cpp
stages/09-stl-and-lambdas/: CMakeLists.txt  README.md
stages/09-stl-and-lambdas/exercises/: 01_vector_basics.cpp  01_vector_basics.solution.cpp  02_std_array.cpp  02_std_array.solution.cpp  03_map_vs_unordered_map.cpp  03_map_vs_unordered_map.solution.cpp  04_sort_lambda.cpp  04_sort_lambda.solution.cpp  05_function_filter.cpp  05_function_filter.solution.cpp
stages/10-file-io-and-error-handling/: CMakeLists.txt  README.md
stages/10-file-io-and-error-handling/exercises/: 01_write_lines.cpp  01_write_lines.solution.cpp  02_read_lines.cpp  02_read_lines.solution.cpp  03_stringstream_parse.cpp  03_stringstream_parse.solution.cpp  04_optional.cpp  04_optional.solution.cpp  05_round_trip.cpp  05_round_trip.solution.cpp
stages/11-smart-pointers-move-rule-of-five/: CMakeLists.txt  README.md
stages/11-smart-pointers-move-rule-of-five/exercises/: 01_unique_ptr.cpp  01_unique_ptr.solution.cpp  02_move_unique.cpp  02_move_unique.solution.cpp  03_shared_ptr.cpp  03_shared_ptr.solution.cpp  04_rule_of_five.cpp  04_rule_of_five.solution.cpp  05_polymorphic_container.cpp  05_polymorphic_container.solution.cpp
stages/12-cmake-multitarget/project/: CMakeLists.txt
stages/13-unit-testing-catch2/exercises/: 01_first_test.cpp  01_first_test.solution.cpp  02_sections.cpp  02_sections.solution.cpp  03_fixture.cpp  03_fixture.solution.cpp  04_generate.cpp  04_generate.solution.cpp  05_tdd_percent.cpp  05_tdd_percent.solution.cpp  06_planted_bug.cpp  06_planted_bug.solution.cpp  CMakeLists.txt
stages/14-sfml-window-loop-delta-time/exercises/: 01_open_window.cpp  01_open_window.solution.cpp  02_coordinate_system.cpp  02_coordinate_system.solution.cpp  03_frame_rate_independent.cpp  03_frame_rate_independent.solution.cpp  04_fixed_accumulator.cpp  04_fixed_accumulator.solution.cpp  05_reflect_edges.cpp  05_reflect_edges.solution.cpp  CMakeLists.txt
stages/14-sfml-window-loop-delta-time/project/: CMakeLists.txt
stages/15-2d-vector-math-and-motion/exercises/: 01_dot_length.cpp  01_dot_length.solution.cpp  02_normalize.cpp  02_normalize.solution.cpp  03_lerp.cpp  03_lerp.solution.cpp  04_semi_implicit_euler.cpp  04_semi_implicit_euler.solution.cpp  05_aim_velocity.cpp  05_aim_velocity.solution.cpp  06_easing_tween.cpp  06_easing_tween.solution.cpp  CMakeLists.txt
stages/16-collision-detection-and-response/exercises/: 01_aabb_overlap.cpp  01_aabb_overlap.solution.cpp  02_aabb_penetration.cpp  02_aabb_penetration.solution.cpp  03_circle_vs_circle.cpp  03_circle_vs_circle.solution.cpp  04_circle_vs_aabb.cpp  04_circle_vs_aabb.solution.cpp  05_reflect_restitution.cpp  05_reflect_restitution.solution.cpp  06_resolve_and_bounce.cpp  06_resolve_and_bounce.solution.cpp  CMakeLists.txt
stages/17-sprites-text-animation/exercises/: 01_frame_at.cpp  01_frame_at.solution.cpp  02_sheet_rects.cpp  02_sheet_rects.solution.cpp  03_texture_lifetime.cpp  03_texture_lifetime.solution.cpp  04_procedural_texture.cpp  04_procedural_texture.solution.cpp  05_text_label.cpp  05_text_label.solution.cpp  06_animator.cpp  06_animator.solution.cpp  CMakeLists.txt
stages/18-first-game-pong/exercises/: 01_aabb_overlap.cpp  01_aabb_overlap.solution.cpp  02_paddle_bounce.cpp  02_paddle_bounce.solution.cpp  03_scoring_and_serve.cpp  03_scoring_and_serve.solution.cpp  04_keyboard_input.cpp  04_keyboard_input.solution.cpp  05_beep.cpp  05_beep.solution.cpp  06_scoreboard.cpp  06_scoreboard.solution.cpp  CMakeLists.txt
stages/19-imgui-debug-overlay/exercises/: 01_speed_scale.cpp  01_speed_scale.solution.cpp  02_frame_profiler.cpp  02_frame_profiler.solution.cpp  03_imgui_hello.cpp  03_imgui_hello.solution.cpp  04_imgui_slider.cpp  04_imgui_slider.solution.cpp  05_fps_overlay.cpp  05_fps_overlay.solution.cpp  CMakeLists.txt
stages/21-camera-and-viewport/project/: CMakeLists.txt
stages/23-component-model/exercises/: 01_plain_oop.cpp  01_plain_oop.solution.cpp  02_component_bag.cpp  02_component_bag.solution.cpp  03_movement_system.cpp  03_movement_system.solution.cpp  04_new_component.cpp  04_new_component.solution.cpp  05_bounce_system.cpp  05_bounce_system.solution.cpp  CMakeLists.txt
stages/24-scenes-state-input-events/exercises/: 01_game_state.cpp  01_game_state.solution.cpp  02_state_machine.cpp  (+10 more)
(+441 files in other folders)
